--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,15 @@
-.container {
-  width: 100vh;
+.box {
+  padding: 3rem;
+  background-color: white;
+  max-width: 100vw;
+  box-shadow: 0 0.5rem 1rem rgba(0,0, 0, 0.15);
+}
+
+.box .small {
+ width: 500px;
+}
+
+.box.letter {
+  width: 800px;
+  height: 90vh;
 }
